fixed font and scrollbar on twinfeats

--- a/TwinFeatsSoftware/css/standard.css
+++ b/TwinFeatsSoftware/css/standard.css
@@ -1,3 +1,8 @@
+html {
+    font-family: "Open Sans", sans-serif;
+    font-size: x-large;
+}
+
 body {
 	margin: 0
 }
@@ -6,6 +11,7 @@ nav {
 	background-color: black;
     display: flex;
     justify-content: space-around;
+    padding: 0.25em;
 	font-size:larger;
 	position: fixed;
 	top: 0;
@@ -25,7 +31,7 @@ a {
     background-position: center;
     background-attachment: fixed;
     width: 100%;
-    height: 100vh;
+    height: 90vh;
 	text-align: center;
 	box-sizing: border-box;
     padding-top: 4rem;
